2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/data/tour,
	  www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-video.jpg,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  restructure the cheese website, add a tour

2008-03-11  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  update release notes

2008-03-11  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/screenshots/cheese-2.22.0_2.jpg,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.22.0.jpg,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/index.wml: 
	  add cheese 2.22, reformat cheese pages, add screenshots

2008-03-10  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/projects/eog/index.html: update latest stable release
	on EOG's website front page.

2008-03-07  Olav Vitters  <olav@bkor.dhs.org>

	* include/evilsedhack: 'Download' doesn't match with actual content.
	Name it 'Latest Release' for now. Or perhaps 'Release Notes'. Better
	name badly needed. For now, just fix Download annoyance.

2008-03-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/Makefile.am: fix Makefile
