@@ -214,6 +214,14 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>March 11th 2008</h3>
+          <p>
+          <a href="tour.html">Check out the brand new Cheese Tour!</a> We tried
+          to cover all features of Cheese and present them to you in a nice
+          way, such that you get a quick overview of Cheese.
+
+          </p>
+
           <h3>March 10th 2008</h3>
           <p>
           Stable verson 2.22.0 was released!
@@ -246,12 +254,6 @@
             <li>added/updated translations</li>
           </ul>
           <a href="download.html">Download it</a> (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-January/msg00041.html">full release notes</a>)
-
-          <h3>January 10th 2008</h3>
-          <p>
-          Cheese will be <a href="http://mail.gnome.org/archives/devel-announce-list/2008-January/msg00001.html">
-          included in GNOME 2.22</a>. YAY! 
-          </p>
 
         </div>
       </div><!-- bottom -->
