@@ -99,8 +99,8 @@
             <p>
             The countdown widget will let you get into
             position, or wreck everything, before the photo that you want is
-            taken. The visual countdown will appear between the bottom of the
-            image and the media bar, and will give you time to press the take photo button, and
+            taken. The visual countdown will appear at the bottom of the image,
+            and will give you time to press the take photo button, and
             get ready! So if you need to put your eye makeup on, be fast, you
             just have 3 seconds!
             </p>
