@@ -1,5 +1,11 @@
 2008-03-12  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/tour.html: 
+	  new news entry about the tour
+
+2008-03-12  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
 	  www.gnome.org/projects/cheese/data/tour,
 	  www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
